--- a/Index.html
+++ b/Index.html
@@ -38,9 +38,9 @@
                 <span class="icon-bar"></span>
 
               </button>
- <a class="navbar-brand" href="#">
-WESTERN SHIP<span class="logo-dec">  <img src="img/logo1.png">MAINTENANCE</span></a>
+<img src="img/logo.png">
               </div>
+
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="Index.html">Home</a></li>
@@ -63,7 +63,8 @@ WESTERN SHIP<span class="logo-dec">  <img src="img/logo1.png">MAINTENANCE</span>
 
         <div class="row">
           <div class="col-md-12 text-center">
-
+ <a class="navbar-brand" href="#">
+WESTERN SHIP<span class="logo-dec">  <img src="img/logo1.png">MAINTENANCE</span></a>
    <h2 class="service-title pad-bt15"><br>     <br><br>OUR SERVICES</h2>
           </div>
 
