--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
 
               </button>
-<img src="img/logo.png">
+<img src="img/logo.png" class="log">
               </div>
 
               <div class="collapse navbar-collapse" id="myNavbar">
