--- a/Contactus.html
+++ b/Contactus.html
@@ -39,8 +39,7 @@
                 <span class="icon-bar"></span>
 
               </button>
- <a class="navbar-brand" href="#">
-WESTERN SHIP<span class="logo-dec">  <img src="img/logo1.png">MAINTENANCE</span></a>
+<img src="img/logo.png" class="log">
               </div>
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
