--- a/Index.html
+++ b/Index.html
@@ -63,8 +63,8 @@
 
         <div class="row">
           <div class="col-md-12 text-center">
- <a class="navbar-brand" href="#">
-WESTERN SHIP<span class="logo-dec">  <img src="img/logo1.png">MAINTENANCE</span></a>
+ <a class="navbar-brand" href="#"> </a>
+ 
    <h2 class="service-title pad-bt15"><br>     <br><br>OUR SERVICES</h2>
           </div>
 
