--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="Index.html">Home</a></li>
-                  <li class=""><a href="Aboutus.html">About Us</a></li>
-                  <li class=""><a href="Services.html">Services</a></li>
-                  <li class=""><a href="Contactus.html">Contact Us</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li class=""><a href="aboutus.html">About Us</a></li>
+                  <li class=""><a href="services.html">Services</a></li>
+                  <li class=""><a href="contactus.html">Contact Us</a></li>
                 </ul>
               </div>
 
