--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    <h2 class="service-title pad-bt15"><br>     <br><br>OUR SERVICES</h2>
           </div>
 
-         <a href="Services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+         <a href="services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port01.jpg" class="img-responsive">
               <figcaption>
@@ -80,7 +80,7 @@
             </figure>
           </div></a>
 
-        <a href="Services.html#blog1">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+        <a href="services.html#blog1">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port02.jpg" class="img-responsive">
               <figcaption>
@@ -91,7 +91,7 @@
             </figure>
           </div></a>
 
-          <a href="Services.html#blog2"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html#blog2"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port03.jpg" class="img-responsive">
               <figcaption>
@@ -104,7 +104,7 @@
             </figure>
           </div></a>
 
-          <a href="Services.html#blog3"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html#blog3"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port04.jpg" class="img-responsive">
               <figcaption>
@@ -117,7 +117,7 @@
             </figure>
           </div></a>
 
-          <a href="Services.html#blog4"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html#blog4"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port05.jpg" class="img-responsive">
               <figcaption>
@@ -132,7 +132,7 @@
 
 
 
-         <a href="Services.html#blog5"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+         <a href="services.html#blog5"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port06.jpg" class="img-responsive">
               <figcaption>
