--- a/contactus.html
+++ b/contactus.html
@@ -66,7 +66,7 @@
             <h2 class="service-title pad-bt15">Contact Us</h2>
 
 
- <form action="" method="post" role="form" class="contactForm">
+ <form action="" method="get" role="form" class="contactForm">
                 <div class="col-md-6 padding-right-zero">
                   <div class="form-group"><br><br>
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
