--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </figure>
           </div></a>
 
-        <a href="services.html#blog1">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+        <a href="services.html">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port022.jpg" class="img-responsive">
               <figcaption>
@@ -93,7 +93,7 @@
 
 
 
-        <a href="services.html#blog2">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+        <a href="services.html">  <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port02.jpg" class="img-responsive">
               <figcaption>
@@ -104,7 +104,7 @@
             </figure>
           </div></a>
 
-          <a href="services.html#blog3"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port03.jpg" class="img-responsive">
               <figcaption>
@@ -117,7 +117,7 @@
             </figure>
           </div></a>
 
-          <a href="services.html#blog4"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port04.jpg" class="img-responsive">
               <figcaption>
@@ -130,7 +130,7 @@
             </figure>
           </div></a>
 
-          <a href="services.html#blog6"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+          <a href="services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port05.jpg" class="img-responsive">
               <figcaption>
