--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
    <h2 class="service-title pad-bt15"><br>     <br><br>OUR SERVICES</h2>
           </div>
 
-         <a href="services.html"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
+         <a href="services.html#blog3"> <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/port01.jpg" class="img-responsive">
               <figcaption>
